# scoring-horse-raicing

./: .env  .env.example  .env.original  .gitignore  .scoring_horse_racing.gemspec.swp  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.production  Gemfile  Pipfile  README.md  Rakefile  alembic.ini  docker-compose.production.yml  docker-compose.yml  investment_horse_racing-crawler.gemspec  scoring_horse_racing.gemspec  scrapy.cfg  setup.cfg
app/models/: course_list_page.rb  entry_list_page.rb  odds_win_page.rb  race_list_page.rb  refund_list_page.rb  result_page.rb  schedule_page.rb
config/: credentials.yml.enc  secrets.yml
config/environments/: production.rb
config/initializers/: okcomputer.rb
db/: config.yml  env.py  schema.rb
db/migrate/: 20180717080457_create_course_list_pages.rb  20180717080457_create_race_list_pages.rb  20180720185911_create_race_list_pages.rb  20180721173349_create_race_list_pages.rb  (+11 more)
docs/: InvestmentHorseRacing.html  ScoringHorseRacing.html  _index.html  class_list.html  file.README.html  index.html  method_list.html  top-level-namespace.html
exe/: investment-horse-racing-crawler  scoring-horse-racing
investment_horse_racing_crawler/: __init__.py  app_logging.py  contracts.py  flask.py  items.py  middlewares.py  pipelines.py  settings.py
lib/: horse_page.rb  odds_win_page.rb  scoring_horse_racing.rb
spec/: jockey_page_test.rb  odds_exacta_page_test.rb  odds_trio_page_test.rb  scoring_horse_racing_spec.rb  spec_helper.rb
test/: test_helper.rb
tests/: context.py  test_all.py  test_flask.py  test_pipelines.py
(+323 files in other folders)
