[metadata]
name = investment_horse_racing_crawler
version = attr: investment_horse_racing_crawler.VERSION
url = https://github.com/u6k/investment-horse-racing-crawler
author = u6k
author_email = u6k.apps@gmail.com
description = Crawler for horse racing
long_description = file: README.md
license = MIT License

[options]
packages = find:

[flake8]
max-line-length = 1000
